--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "good": "^6.1.2",
     "good-console": "^5.0.0",
     "hapi": "^8.4.0",
+    "hapi-accept-language": "^1.0.0",
     "joi": "^6.4.1",
     "js.augment": "0.0.1",
     "jsonwebtoken": "^5.0.1",
